--- a/contact.html
+++ b/contact.html
@@ -72,29 +72,29 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne répond pas, Désolé pour le désagrément!">
 					<div class="form-group">
 						<label>
 							Nom :
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" placeholder="Dupont René" required />
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email :
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" placeholder="adress.email@google.fr" required />
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" required id="input_504" placeholder="Flyers, recherche google, ..." />
 					</div>
 					<div class="form-group">
 						<label>
-							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+							Brief de votre projet<br>
+						</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="Ajoutez autant de détails que nécessaire" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -105,6 +105,7 @@
 				<p>
 					<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a> <br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.0831373652145!2d4.827978615567682!3d45.76952407910573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1615298890564!5m2!1sfr!2sfr" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 			</div>
 		</div>
 	</div>
