--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,11 @@
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
-		<nav class="navbar row">
+		<header role="banner" aria-label="bannière de l'entreprise la chouette agence">
+			<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="banniere entreprise web designer la chouette agence à Lyon" height="40" /></a>
+		</header>
+		<nav role="navigation" aria-label="Menu principal" class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="banniere entreprise web designer la chouette agence à Lyon" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -37,7 +39,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" aria-label="Retour à la page acceuil">Accueil</a>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
@@ -77,26 +79,26 @@
 						<label>
 							Nom :
 						</label>
-						<input id="name" class="form-control" placeholder="Dupont René" required />
+						<input id="name" class="form-control" placeholder="Dupont René" required aria-label="entrez votre nom"/>
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email :
 						</label>
-						<input id="email" class="form-control" type="email" placeholder="adress.email@google.fr" required />
+						<input id="email" class="form-control" type="email" placeholder="adress.email@google.fr" aria-label="entrez votre adresse mail" required />
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" required id="input_504" placeholder="Flyers, recherche google, ..." />
+						<input class="form-control" required id="input_504" placeholder="Flyers, recherche google, ..." aria-label="comment nous avez vous connu ?"/>
 					</div>
 					<div class="form-group">
 						<label>
 							Brief de votre projet<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="Ajoutez autant de détails que nécessaire" required></textarea>
+						</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="Ajoutez autant de détails que nécessaire" aria-label="décrivez nous votre projet" required></textarea>
 					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="confirmer l'envoie du formulaire">
 						Envoyer
 					</button>
 				</form>
