--- a/index.html
+++ b/index.html
@@ -219,22 +219,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://twitter.com/"><span class="fa fa-twitter icon-md" aria-label="twitter"></span></a>
+								<a class="social" href="#"><span class="fa fa-twitter icon-md" aria-label="twitter"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md" aria-label="facebook"></span></a>
+								<a class="social" href="#"><span class="fa fa-facebook icon-md" aria-label="facebook"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md" aria-label="dribble"></span></a>
+								<a class="social" href="#"><span class="fa fa-dribbble icon-md" aria-label="dribble"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md" aria-label="instagram"></span></a>
+								<a class="social" href="#"><span class="fa fa-instagram icon-md" aria-label="instagram"></span></a>
 							</div>
 						</div>	
 					</div>
