--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						Refonte d'un site web pour un journal local
 					</h3>
 					<p class="text-center">
-						Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
+						Nous avons créé une nouvelle <strong>identité visuelle</strong> pour un journal lyonnais.
 					</p>
 				</div>
 				<div class="col-sm-6">
