--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 		<div class="container bloc-lg">
 			<div class="row">
 				<div class="col-sm-12 text-center">
-					<h4 class="mg-md text-center tc-white">
+					<h4 class="mg-md text-center">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h4>
 						<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="accédez à la page contact">Contact</a>
