--- a/contact.html
+++ b/contact.html
@@ -52,107 +52,110 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
-<div class="bloc bg-dots-bg bg-repeat d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text">
-					Parlons web design !
-				</h1>
-				<p class="text-center mg-lg tight-width-whitespace text">
-					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-				</p>
+<main>
+	<div class="bloc bg-dots-bg bg-repeat d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+		<div class="container bloc-lg">
+			<div class="row">
+				<div class="col-sm-12">
+					<h1 class="text-center hero-bloc-text">
+						Parlons web design !
+					</h1>
+					<p class="text-center mg-lg tight-width-whitespace text">
+						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+						Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<div class="bloc bgc-white l-bloc" id="bloc-7">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne répond pas, Désolé pour le désagrément!">
-					<div class="form-group">
-						<label>
-							Nom :
-						</label>
-						<input id="name" class="form-control" placeholder="Dupont René" required aria-label="entrez votre nom"/>
-					</div>
-					<div class="form-group">
-						<label>
-							Adresse email :
-						</label>
-						<input id="email" class="form-control" type="email" placeholder="adress.email@google.fr" aria-label="entrez votre adresse mail" required />
-					</div>
-					<div class="form-group">
-						<label>
-							Comment nous avez-vous connu ?
-						</label>
-						<input class="form-control" required id="input_504" placeholder="Flyers, recherche google, ..." aria-label="comment nous avez vous connu ?"/>
-					</div>
-					<div class="form-group">
-						<label>
-							Brief de votre projet<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="Ajoutez autant de détails que nécessaire" aria-label="décrivez nous votre projet" required></textarea>
-					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="confirmer l'envoie du formulaire">
-						Envoyer
-					</button>
-				</form>
-			</div>
-			<div class="col-sm-6">
-				<p>
-					<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a> <br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-				</p>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.0831373652145!2d4.827978615567682!3d45.76952407910573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1615298890564!5m2!1sfr!2sfr" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+	<div class="bloc bgc-white l-bloc" id="bloc-7">
+		<div class="container bloc-lg">
+			<div class="row">
+				<div class="col-sm-6">
+					<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne répond pas, Désolé pour le désagrément!">
+						<div class="form-group">
+							<label>
+								Nom :
+							</label>
+							<input id="name" class="form-control" placeholder="Dupont René" required aria-label="entrez votre nom"/>
+						</div>
+						<div class="form-group">
+							<label>
+								Adresse email :
+							</label>
+							<input id="email" class="form-control" type="email" placeholder="adress.email@google.fr" aria-label="entrez votre adresse mail" required />
+						</div>
+						<div class="form-group">
+							<label>
+								Comment nous avez-vous connu ?
+							</label>
+							<input class="form-control" required id="input_504" placeholder="Flyers, recherche google, ..." aria-label="comment nous avez vous connu ?"/>
+						</div>
+						<div class="form-group">
+							<label>
+								Brief de votre projet<br>
+							</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="Ajoutez autant de détails que nécessaire" aria-label="décrivez nous votre projet" required></textarea>
+						</div> 
+						<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="confirmer l'envoie du formulaire">
+							Envoyer
+						</button>
+					</form>
+				</div>
+				<div class="col-sm-6">
+					<p>
+						<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a> <br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					</p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.0831373652145!2d4.827978615567682!3d45.76952407910573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1615298890564!5m2!1sfr!2sfr" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+	<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
-
+</main>
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-	<div class="container bloc-sm">
-		<div class="row">
-			<div class="col-sm-12">
-				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
-				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+<footer>
+	<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<div class="container bloc-sm">
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="text-center white">
+						La chouette agence - Agence web basée à Lyon.<br>
+					</p>
+					<div class="row row-no-gutters social">
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							</div>
 						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							</div>
 						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							</div>
 						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</footer>	
 <!-- Footer - bloc-8 END -->
 
 </div>
