--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,8 @@
 						Parlons web design !
 					</h1>
 					<p class="text-center mg-lg tight-width-whitespace text">
-						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-						Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+						Nous sommes ravis que vous souhaitiez collaborer avec notre <strong>agence</strong>.<br>
+						Parlez-nous de votre <strong>projet</strong> en complétant le formulaire ci-dessous.
 					</p>
 				</div>
 			</div>
@@ -106,7 +106,7 @@
 				</div>
 				<div class="col-sm-6">
 					<p>
-						<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a> <br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+						<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a> <br>2 place Sathonay 69001 <strong>Lyon</strong><br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 					</p>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.0831373652145!2d4.827978615567682!3d45.76952407910573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1615298890564!5m2!1sfr!2sfr" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 				</div>
@@ -127,27 +127,27 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<p class="text-center white">
-						La chouette agence - Agence web basée à Lyon.<br>
+						<strong>La chouette agence</strong> -<strong> Agence web design </strong>basée à <strong>Lyon</strong><br>
 					</p>
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
 					</div>
