--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
 			<div class="row tight-width-whitespace black-background">
 				<div class="col-sm-12">
 					<h2 class="mg-md text-center tc-white">
-						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+						Nous pouvons vous aider !
 					</h2>
 					<p class="text-center white">
-						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un <strong>site</strong> de A à Z ou de donner un coup de jeune à leur <strong>site</strong> Que vous ayez besoin d’une <strong>identité visuelle</strong> complète ou d’une refonte de votre <strong>site</strong>, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des <strong>sites</strong> beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 					</p>
 				</div>
 			</div>
@@ -154,7 +155,7 @@
 						Refonte d'un site web pour un journal local
 					</h3>
 					<p class="text-center">
-						Nous avons créé une nouvelle <strong>identité visuelle</strong> pour un journal lyonnais.
+						Nous avons créé une nouvelle <strong>identité visuelle</strong> pour un journal <strong>Lyonais</strong>
 					</p>
 				</div>
 				<div class="col-sm-6">
@@ -174,7 +175,7 @@
 						Création d'un site internet pour un voyageur
 					</h3>
 					<p class="text-center">
-						Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
+						Nous avons élaboré un <strong>site internet design</strong> et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 					</p>
 				</div>
 				<div class="col-sm-6">
@@ -183,7 +184,7 @@
 						Conception d'un site pour une agence de mariage
 					</h3>
 					<p class="text-center">
-						Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
+						Nous avons travaillé avec cette <strong>agence</strong> pour créer un <strong>site internet design</strong> permettant la présentation détaillée de leurs prestations.
 					</p>
 				</div>
 			</div>
@@ -197,7 +198,7 @@
 			<div class="row">
 				<div class="col-sm-12 text-center">
 					<h4 class="mg-md text-center">
-						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+						Prêt pour redonner vie à votre <strong>projet</strong> ?<br>Contactez notre équipe !
 					</h4>
 						<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="accédez à la page contact">Contact</a>
 				</div>
@@ -214,7 +215,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<p class="text-center white">
-						La chouette agence - Agence web basée à Lyon.<br>
+						La chouette agence - <strong>Agence web design</strong> basée à <strong>Lyon</strong><br>
 					</p>
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
