--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
-		<header role="banner" aria-label="bannière de l'entreprise la chouette agence">
+		<header aria-label="bannière de l'entreprise la chouette agence">
 			<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="banniere entreprise web designer la chouette agence à Lyon" height="40" /></a>
 		</header>
-		<nav role="navigation" aria-label="Menu principal" class="navbar row">
+		<nav aria-label="Menu principal" class="navbar row">
 			<div class="navbar-header">
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -75,12 +75,12 @@
 		<div class="container bloc-lg">
 			<div class="row">
 				<div class="col-sm-6">
-					<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne répond pas, Désolé pour le désagrément!">
+					<form id="form_1">
 						<div class="form-group">
 							<label>
 								Nom :
 							</label>
-							<input id="name" class="form-control" placeholder="Dupont René" required aria-label="entrez votre nom"/>
+							<input id="name" class="form-control" placeholder="Dupont René" aria-label="entrez votre nom" required />
 						</div>
 						<div class="form-group">
 							<label>
