--- a/index.html
+++ b/index.html
@@ -220,22 +220,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-twitter icon-md" aria-label="twitter"></span></a>
+								<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-facebook icon-md" aria-label="facebook"></span></a>
+								<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-dribbble icon-md" aria-label="dribble"></span></a>
+								<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-instagram icon-md" aria-label="instagram"></span></a>
+								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>	
 					</div>
