--- a/contact.html
+++ b/contact.html
@@ -77,15 +77,15 @@
 				<div class="col-sm-6">
 					<form id="form_1">
 						<div class="form-group">
-							<label>
+							<label for="name">
 								Nom :
-							</label for="name">
+							</label>
 							<input id="name" class="form-control" placeholder="Dupont René" aria-label="entrez votre nom" required />
 						</div>
 						<div class="form-group">
-							<label>
+							<label for="email">
 								Adresse email :
-							</label for="email">
+							</label>
 							<input id="email" class="form-control" type="email" placeholder="adress.email@google.fr" aria-label="entrez votre adresse mail" required />
 						</div>
 						<div class="form-group">
