--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
+						<h2>Nous pouvons vous aider à devenir plus attractif sur Internet</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -114,7 +114,7 @@
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<blockquote>
-							<p>"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+							<p>"<strong>La chouette agence</strong> est une <strong>exellente agence web</strong> ! Les <strong>web designers</strong> ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre <strong>site</strong>. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
 							</blockquote>
 							<p>Maxime Guilbard, PDG de À vos fourchettes</p>
 					</div>
@@ -203,7 +203,7 @@
 				<div class="row">
 					<div class="col-sm-12 text-center">
 						<h4 class="mg-md text-center">
-							Prêt pour redonner vie à votre <strong>projet</strong> ?<br>Contactez notre équipe !
+							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h4>
 							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="accédez à la page contact">Contact</a>
 					</div>
