--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<p class="text-center white">
-						<strong>La chouette agence</strong> -<strong> Agence web design </strong>basée à <strong>Lyon</strong><br>
+						La chouette agence - <strong>Agence web design</strong> basée à <strong>Lyon</strong><br>
 					</p>
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
@@ -149,19 +149,19 @@
 							<div class="text-center">
 								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
-						</div>
-						<div class="row">
-							<div class="col-sm-4">
-								<h5>Partenaires</h5>
-									<ul>
-										<li><a href="voiture.com">voiture.com</a></li>
-										<li><a href="pizza.com">pizza.com</a></li>
-										<li><a href="matoiture.com">matoiture.com</a></li>
-										<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-									</ul>		
-							</div>
 						</div>	
 					</div>
+					<div class="row">
+						<div class="col-sm-4">
+							<h5>Partenaires</h5>
+								<ul>
+									<li><a href="voiture.com">voiture.com</a></li>
+									<li><a href="pizza.com">pizza.com</a></li>
+									<li><a href="matoiture.com">matoiture.com</a></li>
+									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								</ul>		
+						</div>	
+					</div>	
 				</div>
 			</div>
 		</div>
