--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h2>Nous pouvons vous aider à devenir plus attractif sur Internet</h2>
+						<h2>	
+							Agence de web design à Lyon
+						</h2>
+						<p> Nous aidons les entreprises à devenir attractives sur le net</p>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
