--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<blockquote>
-							<p>"<strong>La chouette agence</strong> est une <strong>exellente agence web</strong> ! Les <strong>web designers</strong> ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre <strong>site</strong>. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+							<p>"<strong>La chouette agence</strong> est une <strong>excellente agence web</strong> ! Les <strong>web designers</strong> ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre <strong>site</strong>. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
 							</blockquote>
 							<p>Maxime Guilbard, PDG de À vos fourchettes</p>
 					</div>
