--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css">
-	<link rel="stylesheet" type="text/css" href="style-min.css">
+	<link rel="stylesheet" type="text/css" href="./css/style-min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line-min.css">
 
@@ -68,12 +68,12 @@
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-	<section>
+	<section aria-labelledby="foo">
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h2>	
+						<h2 id="foo">	
 							Agence de web design à Lyon
 						</h2>
 						<p> Nous aidons les entreprises à devenir <strong>plus attractives sur Internet</strong></p>
@@ -162,7 +162,7 @@
 							Refonte d'un site web pour un journal local
 						</h3>
 						<p class="text-center">
-							Nous avons créé une nouvelle <strong>identité visuelle</strong> pour un journal <strong>Lyonais</strong>
+							Nous avons créé une nouvelle <strong>identité visuelle</strong> pour un journal <strong>Lyonnais</strong>
 						</p>
 					</div>
 					<div class="col-sm-6">
@@ -250,7 +250,7 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-4">
-							<h5>Partenaires</h5>
+							<p>Partenaires</p>
 								<ul>
 									<li><a href="voiture.com">voiture.com</a></li>
 									<li><a href="pizza.com">pizza.com</a></li>
