--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-	<section aria-labelledby="foo">
+	<section>
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h2 id="foo">	
+						<h2>	
 							Agence de web design à Lyon
 						</h2>
 						<p> Nous aidons les entreprises à devenir <strong>plus attractives sur Internet</strong></p>
